cambio de proyecto de cafe a compras

--- a/index.html
+++ b/index.html
@@ -299,10 +299,10 @@
 
                 <div class="proyecto">
                     <a href="#" class="cta" id="2">
-                        <img src="img/Blogcafeandcourse.jpg" alt="">
+                        <img src="img/Compras.PNG" alt="">
                         <div class="overlay">
-                            <h3>Venta y curso de café</h3>
-                            <p>CafeandCourse</p>
+                            <h3>Carrito de compras</h3>
+                            <p>Compra de cursos</p>
                         </div>
                     </a>
                 </div>
